--- a/cookbooks/nginx/templates/nginx.conf.erb
+++ b/cookbooks/nginx/templates/nginx.conf.erb
@@ -24,7 +24,7 @@ http {
     sendfile            on;
     tcp_nopush          on;
     tcp_nodelay         on;
-    keepalive_timeout   65;
+    keepalive_timeout   5;
     types_hash_max_size 2048;
 
     include             /etc/nginx/mime.types;
@@ -35,6 +35,7 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
+    # catch-all 設定
     server {
         listen       80 default_server;
         listen       [::]:80 default_server;
