--- a/cookbooks/nginx/templates/nginx.conf.erb
+++ b/cookbooks/nginx/templates/nginx.conf.erb
@@ -85,4 +85,46 @@ http {
 #        location = /50x.html {
 #        }
 #    }
+
+
+    server {
+    server_name yoshikouki.net; # managed by Certbot
+        root         /usr/share/nginx/html;
+
+        # Load configuration files for the default server block.
+        include /etc/nginx/default.d/*.conf;
+
+        location / {
+        }
+
+        error_page 404 /404.html;
+        location = /404.html {
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+        }
+
+
+    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/yoshikouki.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/yoshikouki.net/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 }
+
+    server {
+    if ($host = yoshikouki.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+        listen       80 ;
+        listen       [::]:80 ;
+    server_name yoshikouki.net;
+    return 404; # managed by Certbot
+
+
+}}
