--- a/cookbooks/nginx/templates/nginx.conf.erb
+++ b/cookbooks/nginx/templates/nginx.conf.erb
@@ -36,6 +36,14 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
+        server_name yoshikouki.net;
+        listen       80 ;
+        listen       [::]:80 ;
+
+        return 301 https://$host$request_uri;
+    }
+
+    server {
         server_name yoshikouki.net; # managed by Certbot
         root         /usr/share/nginx/html;
 
@@ -61,37 +69,13 @@ http {
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
     }
 
-    server {
-        if ($host = yoshikouki.net) {
-            return 301 https://$host$request_uri;
-        } # managed by Certbot
-        server_name yoshikouki.net;
-
-        listen       80 ;
-        listen       [::]:80 ;
-        return 404; # managed by Certbot
-    }
-
-    # Setting for catch-all
+# Setting for catch-all
     server {
         server_name  _;
         listen       80 default_server;
         listen       [::]:80 default_server;
-        root         /usr/share/nginx/html;
 
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
-
-        location / {
-        }
-
-        error_page 404 /404.html;
-        location = /404.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-        }
+        return 301 https://yoshikouki.net$request_uri;
     }
 
 # Settings for a TLS enabled server.
