公開フォルダを /var/www へ変更

--- a/cookbooks/nginx/templates/nginx.conf.erb
+++ b/cookbooks/nginx/templates/nginx.conf.erb
@@ -47,7 +47,7 @@ http {
         server_name yoshikouki.net; # managed by Certbot
         listen [::]:443 ssl ipv6only=on; # managed by Certbot
         listen 443 ssl; # managed by Certbot
-        root         /usr/share/nginx/html;
+        root         /var/www;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
