--- a/cookbooks/nginx/templates/nginx.conf.erb
+++ b/cookbooks/nginx/templates/nginx.conf.erb
@@ -86,6 +86,11 @@ http {
         listen       [::]:443 ssl http2 default_server;
 
         return 301 https://yoshikouki.net$request_uri;
+
+        ssl_certificate /etc/letsencrypt/live/yoshikouki.net/fullchain.pem; # managed by Certbot
+        ssl_certificate_key /etc/letsencrypt/live/yoshikouki.net/privkey.pem; # managed by Certbot
+        include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
     }
 
 }
